--- a/src/16-DivaProblems.tex
+++ b/src/16-DivaProblems.tex
@@ -14,7 +14,6 @@ This chapter contains a list of Frequently Asked Questions concerning many aspec
 \index{Download}
 The latest stable version if available at \url{http://modb.oce.ulg.ac.be/mediawiki/index.php/DIVA#How_to_get_the_code.3F}. 
 
-%Another possibility is to check the page \url{http://modb.oce.ulg.ac.be/viewsvn/}, which contains the svn repository.
 
 \subsection{What do I need to install DIVA?}
 %--------------------------------------------
@@ -41,14 +40,14 @@ Yes, it is always possible to perform an interpolation with \diva on this kind o
 \subsection{How to report a bug or a problem?}
 %----------------------------------------------
 
-The preferred option is to send a message to the \diva user group on google:\\
- \url{http://groups.google.com/group/diva_users}. 
- 
-This has two advantages over emails:
+The preferred options are:
 \begin{enumerate}
-\item The questions is directly sent to all the \diva developers.
-\item The issues previously solved are archived and available for other users.
-\end{enumerate}
+\item to send a message to the \diva user group on google:\\
+\url{http://groups.google.com/group/diva_users} or
+\item to open an issue on GitHub: \url{https://github.com/gher-ulg/DIVA/issues}
+ \end{enumerate} 
+
+The advantage over emails is twofold: the questions is directly sent to all the \diva developers and the issues previously solved are archived and available for other users.
 
 Along with a small description of the problem, add relevant informations that would help us solving your issue:
 \begin{itemize}
@@ -59,19 +58,20 @@ Along with a small description of the problem, add relevant informations that wo
 \end{itemize}
 If the problem can be reproduced at the 2-D level (i.e., working in the directory \directory{divastripped}), add the input files that generated the problem as well, so that we can check if the issue is machine-dependent. 
 
-To know your O. S. you can type in the shell:
+To know your O.S. you can type in the shell:
 
 \begin{lstlisting}[style=Bash]
 gherulg$ uname -voi
 28-Ubuntu SMP Tue Oct 9 19:31:23 UTC 2012 x86_64 GNU/Linux
 \end{lstlisting}
 
-If you received advice which helped you to solve the problem, please post a comment so that others know the solution worked. 
+If you received advice which helped you to solve the problem, please post a comment so that others know the solution worked or close the issue opened on GitHub.
 %%
 
 
 \subsection{How to register to the user group?}
 %------------------------------------------------
+
 \begin{itemize}
 \item Go to \url{http://groups.google.com/group/diva_users} and login with a google account (not necessarily a gmail address). 
 \item Follow the "\textit{Apply for membership}" link. You will be asked to explain why you want to use \diva.
