figure bounding box

--- a/src/05-DivaTheory.tex
+++ b/src/05-DivaTheory.tex
@@ -18,7 +18,7 @@ In this chapter we consider only two-dimensional cases, but generalization can b
 \begin{figure}[htpb]
 	\centering
 	\parbox{.5\textwidth}{
-		\includegraphics[width=.45\textwidth,viewport=166  289 440 564]{gridding}
+		\includegraphics[width=.45\textwidth]{gridding}
 		}\parbox{.5\textwidth}{
 		\caption[Schema of the data gridding.]{Schema of the data gridding: the blue dots indicate data positions, while the nodes of the grid are the points where the field has to be determined.\label{gridproblem}}
 		}
@@ -40,7 +40,7 @@ For obtaining a field on a regular grid, two main techniques have to be distingu
 \begin{figure}[htpb]
 	\centering
 	\parbox{.5\textwidth}{
-		\includegraphics[width=.35\textwidth,bb= 0 0 385 147]{approximation}
+		\includegraphics[width=.35\textwidth]{approximation}
 		}\parbox{.5\textwidth}{
 		\caption[Interpolation vs. approximation.]{Interpolation (black line) provides a solution that goes across all the data points, while the approximation (grey line) has only to be "close" to the measurements, but with a relative "smoothness".}
 		}
@@ -357,7 +357,7 @@ J[\varphi] = \sum_{e=1}^{N_{e}}J_{e}(\varphi_{e}).
 \begin{figure}[htpb]
 	\centering
 	\parbox{.6\textwidth}{
-		\includegraphics[width=.55\textwidth,bb= 0 0 299 165]{FDVelement}
+		\includegraphics[width=.55\textwidth]{FDVelement}
 		}\parbox{.4\textwidth}{
 		\caption[Triangular elements used for the mesh.]{Triangular elements used for the mesh. This kind of elements are referred to as \emph{"Fraeijs de Veubeke"} elements, see \citet{BRASSEUR94} for details. One triangular element is made up of 3 sub-triangles and has a total of  12~degrees of freedom.\label{fig:FDVelement}}}
 \end{figure}
