remove useful references

--- a/src/DivaUserGuide.tex
+++ b/src/DivaUserGuide.tex
@@ -71,7 +71,7 @@
 \pagestyle{plain}
 
 \input{18-divademecum} % --> to prepare (2D and 4D)
-\input{19-DivaLinks}
+%\input{19-DivaLinks}
 
 \bibliography{20-DivaPublications.bib}
 
